@@ -1,3 +1,5 @@
+- add --rebuild-set to dependent
+---------------------------
 - use `eval $(fgrep -h 'PKGMK_PACKAGE_DIR=' $(which pkgmk) /etc/pkgmk.conf) && echo
 $PKGMK_PACKAGE_DIR` to determine PACKAGE_DIR
 - add update-footprint, update-md5sum commands (patch in trac)
