@@ -12,6 +12,7 @@
 - update default prt-get.conf to reflect new port hierarchy (core/opt/contrib)
 - add timestamps to log files
 - fix aliasing bug introduce earlier in the .12 session (thanks Mark)
+- add --recursive and --tree for dependent
 
 * 0.5.11	29.05.2005  Johannes Winkelmann
 - add --path to 'ls'
